--- a/03-ch1.md
+++ b/03-ch1.md
@@ -126,11 +126,79 @@ To prove that a proposition is true for all structures s, prove the following:
 
 ## 1.2 Deriving Recursive Programs
 
-...
+We can analyze an element of an inductively defined set to see how it is built
+from smaller elements of the set. We can use this idea to define procedures that
+compute on inductively defined sets.
+
+**The Smaller-Subproblem Principle**
+
+*If we can reduce a problem to a smaller subproblem, we can call the procedure
+that solves the problem to solve the subproblem.*
+
+The idea is illustrated with 5 examples:
+
+- `list-length`
+- `nth-element`
+- `remove-first`
+- `occurs-free?`
+- `subst`
+
+The Kleene star gives a concise description, but it is not so helpful for
+writing programs.
+
+The implementation of `subst` lead to mutual recursion which was foreshadowed
+by the structure of its input.
+
+The decomposition of `subst` into two procedures, one for each syntactic
+category, is an important technique. It allows us to think about one syntactic
+category at a time, which greatly simplifies our thinking about more complicated
+programs.
+
+**Follow the Grammar**
+
+*When defining a procedure that operates on inductively defined data, the
+structure of the program should be patterned after the structure of the data.*
+
+More precisely:
+
+- Write one procedure for each nonterminal in the grammar. The procedure will
+be responsible for handling the data corresponding to that nonterminal, and
+nothing else.
+
+- In each procedure, write one alternative for each production corresponding to
+that nonterminal. You may need additional case structure, but this will get
+you started. For each nonterminal that appears in the right-hand side, write a
+recursive call to the procedure for that nonterminal.
 
 ## 1.3 Auxiliary Procedures and Context Arguments
 
-...
+The *Follow-the-Grammar* recipe is powerful, but sometimes it is not
+sufficient. Consider the procedure `number-elements`. This procedure should
+take any list `[v0, v1, v2, ...]` and return the list
+`[(0, v0), (1, v1), (2, v2), ...]`. To solve the problem, we need to generalize
+the problem. We do so by introducing an auxiliary procedure
+`number-elements-from` that takes an additional argument that specifies the
+number to start from.
+
+Two important observations:
+
+1. The procedure `number-elements-from` has a specification that is independent
+of the specification of `number-elements`.
+
+2. The two arguments to `number-elements-from` play two different roles. The
+first argument is the list we are working on. It gets smaller at every
+recursive call. The second argument, however, is an abstraction of the context
+in which we are working. We sometimes call this a context argument or inherited
+attribute.
+
+**No Mysterious Auxiliaries**
+
+*When defining an auxiliary procedure, always specify what it does on all
+arguments, not just the initial values.*
+
+There are many situations in which it may be helpful or necessary to introduce
+auxiliary variables or procedures to solve a problem. Always feel free to do
+so.
 
 ## Resources
 
