Add my notes on section 2.3, 2.4 and 2.5 of chapter 2

--- a/04-ch2.md
+++ b/04-ch2.md
@@ -51,7 +51,8 @@ A specification does not dictate how a data type is to be represented.
 Most interfaces will contain:
 
 - **constructors** - they build elements of the data type.
-- **observers** - they extract information from values of the data type.
+- **observers** - they extract information from values of the data type. There
+can be different types of observers. For e.g. **predicates** and **extractors**.
 
 If the representation of a type is hidden, so it cannot be exposed by any
 operation (including printing), the type is said to be **opaque**. Otherwise,
@@ -112,5 +113,81 @@ procedural and defunctionalized representations will be a recurring theme in
 this book.
 
 ### 2.3 Interfaces for Recursive Data Types
+
+The advice in this section doesn't currently apply since I'm using Elm which
+has support for
+[algebraic data types](https://en.wikipedia.org/wiki/Algebraic_data_type).
+
+```elm
+type LcExp
+  = Id String
+  | Lambda String LcExp
+  | App LcExp LcExp
+```
+
+However, if I'm using a language that doesn't have such support then a general
+recipe for designing an interface for a recursive data type is a follows:
+
+**Designing an interface for a recursive data type**
+
+1. *Include one constructor for each kind of data in the data type.*
+2. *Include one predicate for each kind of data in the data type.*
+3. *Include one extractor for each piece of data passed to a constructor of the
+data type.*
+
 ### 2.4 A Tool for Defining Recursive Data Types
+
+For complicated data types, applying the recipe for constructing an interface
+can become tedious. This section introduces a tool for automatically
+constructing and implementing such interfaces in Scheme.
+
+**N.B.** *The tool is essentially equivalent to algebraic data types. But it's
+nice to see how support for macros in Scheme enabled this to be possible.*
+
+The forms `define-datatype` and `cases` provide a convenient way of defining
+an inductive data type.
+
 ### 2.5 Abstract Syntax and Its Representation
+
+A grammar usually specifies a particular representation of an inductive data
+type. The representation is called **concrete syntax**, or **external**
+representation.
+
+The set of lambda calculus expressions might have used some other concrete
+syntax for lambda calculus expressions. For example,
+
+```
+Lc-exp ::= Identifier
+       ::= proc Identifier => Lc-exp
+       ::= Lc-exp (Lc-exp)
+```
+
+In order to process such data, we need to convert it to an **internal**
+representation. We call this **abstract syntax**. In the abstract syntax,
+terminals such as parentheses need not be stored, because they convey no
+information.
+
+**N.B.** *Abstract syntax should store/represent only what conveys information.*
+
+It is convenient to visualize the internal representation as an abstract syntax
+tree.
+
+**How to go from concrete syntax to abstract syntax?**
+
+*To create an abstract syntax for a given concrete syntax, we must name each
+production of the concrete syntax and each occurrence of a nonterminal in each
+production.*
+
+Concrete syntax is primarily useful for humans.
+
+Abstract syntax is primarily useful for computers.
+
+If the concrete syntax is a set of strings of characters, it may be a complex
+undertaking to derive the corresponding abstract syntax tree. This task is
+called **parsing** and is performed by a **parser**.
+
+Writing a parser is difficult in general and it is best performed by a tool
+called a **parser generator**. A parser generator takes as input a grammar and
+produces a parser.
+
+**N.B.** *Alternatively you can use parser combinators.*
