Edit my Chapter 1 notes

--- a/03-ch1.md
+++ b/03-ch1.md
@@ -5,33 +5,40 @@
 Ways of defining sets of values:
 
 - Inductive specification
-  - Types of definitions: top-down, bottom-up, rules of inference
+  - Types of definitions: top-down, bottom-up, rules of inference.
 - Grammars
+  - Context sensitive constraints can be added via other methods.
 
 Defining sets inductively allows us to:
 
 1. Prove theorems about the members of the set.
-
 2. Write programs that manipulate them.
+
+Strong induction is usually used to do the proofs.
+
+Inductively defined sets of values suggest how recursive procedures can be
+designed to manipulate them.
+
+Sometimes auxiliary procedures are needed to help with the implementation of
+the main recursive procedure.
 
 ## Notes
 
 This chapter introduces the basic programming tools we will need.
 
-Recursion will be at the core of our techniques.
+**Recursion** will be at the core of our techniques.
 
 ### 1.1 Recursively Specified Data
 
 This section introduces formal techniques for specifying sets of values.
 
-Inductive specification is a powerful method of specifying a set of values.
+**Inductive specification** is a powerful method of specifying a set of values.
 
 **Top-down definition**
 
 *Why is it a top-down definition?*
 
 1. We start at the number `n`. (at the top)
-
 2. We continue to subtract 3 from it until one of the conditions hold. (break
 it down)
 
@@ -43,7 +50,6 @@ defined set of values.
 *Why is it a bottom-up definition?*
 
 1. We start with elements in the set. (from the bottom)
-
 2. We use the rules to generate more elements that can be in the set. (build it
 up)
 
@@ -118,11 +124,11 @@ Once sets are defined inductively we can use the definitions in two ways:
 To prove properties of inductively defined sets of values we can use **proof by
 structural induction**.
 
-To prove that a proposition is true for all structures s, prove the following:
+To prove that a proposition is true for all structures `s`, prove the following:
 
 1. It is true on simple structures (those without substructures).
 
-2. If it is true on the substructures of s, then it is true on s itself.
+2. If it is true on the substructures of `s`, then it is true on `s` itself.
 
 ## 1.2 Deriving Recursive Programs
 
