Add some key points to my Chapter 2 notes

--- a/04-ch2.md
+++ b/04-ch2.md
@@ -1,5 +1,29 @@
 # Data Abstraction
 
+## Key Points
+
+Use **data abstraction** to **hide implementation details** whenever possible.
+
+> Data abstraction = Interface + Implementation.
+
+**Data structures** and **procedures** are the two main strategies for
+representing data types.
+
+A process known as **defunctionalization** can be used if the implementation
+language does not allow higher-order procedures.
+
+**Algebraic data types** are great for representing **inductively defined data
+types**. However, if the implementation language doesn't support them then you
+can roll your own.
+
+**Concrete syntax** is useful for humans.
+
+**Abstract syntax** is useful for computers.
+
+> Concrete syntax ----> Parser ----> Abstract syntax
+
+**Parsing** gets you from concrete to abstract syntax.
+
 ## Notes
 
 ### 2.1 Specifying Data via Interfaces
