Add my notes on section 3.2 of chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -67,9 +67,99 @@ The standard approach to building a front end is to use a **parser generator**.
 A parser generator is a program that takes a lexical specification and a
 grammar, and produces a scanner and a parser for them.
 
-### LET: A Simple Language
-### PROC: A Language with Procedures
-### LETREC: A Language with Recursive Procedures
-### Scoping and Binding of Variables
-### Eliminating Variable Names
-### Implementing Lexical Addressing
+### 3.2 LET: A Simple Language
+
+An important part of the specification of any programming language is the set
+of values that the language manipulates. Each language has at least two such
+sets: the **expressed values** and the **denoted values**.
+
+The expressed values are the possible values of expressions.
+
+The denoted values are the values bound to variables.
+
+If we are going to evaluate expressions containing variables, we will need to
+know the value associated with each variable. We do this by keeping those
+values in an environment.
+
+An environment is a function whose domain is a finite set of variables and
+whose range is the denoted values.
+
+```
+env : Identifier -> DenVal
+```
+
+**Syntax for the LET language**
+
+```
+Program    ::= Expression
+               [(a-program exp)]
+
+Expression ::= Number
+               [(const-exp n)]
+
+           ::= -(Expression, Expression)
+               [(diff-exp exp1 exp2)]
+
+           ::= zero? (Expression)
+               [(zero?-exp exp)]
+
+           ::= if Expression then Expression else Expression
+               [(if-exp exp1 exp2 exp3)]
+
+           ::= Identifier
+               [(var-exp v)]
+
+           ::= let Identifier = Expression in Expression
+               [(let-exp v exp body)]
+```
+
+**Semantics for the LET language**
+
+```
+ExpVal = Int + Bool
+DenVal = Int + Bool
+
+
+(value-of-program (a-program exp))
+= (value-of exp ρ) ; for some initial environment ρ
+
+
+(value-of (const-exp n) ρ)
+= (num-val n)
+
+
+(value-of (var-exp v) ρ)
+= (apply-env ρ v) ; since DenVal = ExpVal this works
+
+
+(value-of (diff-exp exp1 exp2) ρ)
+= (num-val
+    (- (expval->num (value-of exp1 ρ))
+       (expval->num (value-of exp2 ρ))))
+
+
+   (value-of exp ρ) = val
+----------------------------
+(value-of (zero?-exp exp) ρ)
+= (bool-val #t) if (expval->num val) == 0
+= (bool-val #f) if (expval->num val) /= 0
+
+
+     (value-of exp1 ρ) = val1
+------------------------------------
+(value-of (if-exp exp1 exp2 exp3) ρ)
+= (value-of exp2 ρ) if (expval->bool val1) == #t
+= (value-of exp3 ρ) if (expval->bool val1) == #f
+
+
+     (value-of exp ρ) = val
+---------------------------------
+(value-of (let-exp v exp body) ρ)
+= (value-of body [v=val]ρ)
+```
+
+### 3.3 PROC: A Language with Procedures
+### 3.4 LETREC: A Language with Recursive Procedures
+### 3.5 Scoping and Binding of Variables
+### 3.6 Eliminating Variable Names
+### 3.7 Implementing Lexical Addressing
