Add my notes on section 3.3 of chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -159,6 +159,75 @@ DenVal = Int + Bool
 ```
 
 ### 3.3 PROC: A Language with Procedures
+
+*What information must be included in a value representing a procedure?*
+
+The **lexical scope rule** tells us that when a procedure is applied, its body
+is evaluated in an environment that binds the formal parameter of the procedure
+to the argument of the call. Variables occurring free in the procedure should
+also obey the lexical binding rule.
+
+Consider,
+
+```
+let x = 200
+in let f = proc (z) -(z,x)
+   in let x = 100
+      in let g = proc (z) -(z,x)
+         in -((f 1), (g 1))
+```
+
+Both `f` and `g` are created from identical expressions but they must behave
+differently. Hence, the value of a `proc` expression must depend in some way on
+the environment in which it is evaluated. Furthermore, any other variables must
+have the same values they had at procedure-creation time.
+
+The data structures used to represent procedures (as they have been specified)
+are called **closures**, because they are self-contained: they contain
+everything the procedure needs in order to be applied. The procedure is
+**closed over** or **closed in** its creation environment.
+
+**Syntax for the PROC language**
+
+```
+Expression ::= proc (Identifier) Expression
+               [(proc-exp v body)]
+
+           ::= (Expression Expression)
+               [(call-exp rator rand)]
+```
+
+**Semantics for the PROC language**
+
+```
+ExpVal = Int + Bool + Proc ; => procedures can be the result of expressions
+DenVal = Int + Bool + Proc ; => procedures can be bound to variables
+
+; Proc is an abstract data type for procedures.
+; Its interface includes:
+; - procedure, a constructor to build a procedure value
+; - apply-procedure, an observer to apply a procedure value
+
+
+(value-of (proc-exp v body) ρ)
+= (proc-val (procedure v body ρ))
+
+
+(value-of (call-exp rator rand) ρ)
+= (let ((proc (expval->proc (value-of rator ρ)))
+        (arg (value-of rand ρ)))
+    (apply-procedure proc arg))
+
+
+(apply-procedure (procedure v body ρ) val)
+= (value-of body [v=val]ρ)
+```
+
+**N.B.** *The example given in the book on `pg 77` is quite informative.*
+
+**N.B.** *There is a similarity between the value of `let-exp` and
+`apply-procedure`.*
+
 ### 3.4 LETREC: A Language with Recursive Procedures
 ### 3.5 Scoping and Binding of Variables
 ### 3.6 Eliminating Variable Names
