Add my notes on section 3.4 of chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -229,6 +229,44 @@ DenVal = Int + Bool + Proc ; => procedures can be bound to variables
 `apply-procedure`.*
 
 ### 3.4 LETREC: A Language with Recursive Procedures
+
+LETREC adds recursion.
+
+Consider,
+
+```
+letrec double(x) = if zero?(x) then 0 else -((double -(x,1)), -2)
+in (double 6)
+```
+
+The `double` inside the body of the procedure needs to be executed in an
+environment where `double` is defined.
+
+```
+Expression ::= letrec Identifier (Identifier) = Expression in Expression
+               [(letrec-exp proc-name bound-var proc-body letrec-body)]
+
+
+(value-of (letrec-exp proc-name bound-var proc-body letrec-body) ρ)
+= (value-of
+    letrec-body
+    (extend-env-rec proc-name bound-var proc-body ρ))
+```
+
+**What is the desired behavior of
+`(extend-env-rec proc-name bound-var proc-body ρ)`?**
+
+Let `ρ1` be the environment produced by
+`(extend-env-rec proc-name bound-var proc-body ρ)`. Then what should
+`(apply-env ρ1 var)` return?
+
+```
+if var == proc-name then
+  (proc-val (procedure bound-var proc-body ρ1))
+else
+  (apply-env ρ var)
+```
+
 ### 3.5 Scoping and Binding of Variables
 ### 3.6 Eliminating Variable Names
 ### 3.7 Implementing Lexical Addressing
