Add my notes for section 3.5 and 3.6 of chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -6,7 +6,12 @@ We always need a front end that converts programs into abstract syntax trees.
 
 It's all basically interpreters.
 
-...
+A declaration introduces a variable as a name for some value and a reference
+uses the variable.
+
+We can use lexical depth to get rid of variable names entirely.
+
+WIP
 
 ## Notes
 
@@ -268,5 +273,87 @@ else
 ```
 
 ### 3.5 Scoping and Binding of Variables
+
+In most programming languages, variables may appear in two different ways: as
+**references** or as **declarations**.
+
+A variable **reference** is a use of the variable.
+
+A **declaration** introduces the variable as a name for some value.
+
+A variable reference is bound by the declaration with which it is associated. It
+is **bound** to its value.
+
+Declarations in most programming languages have a limited scope, so that the
+same variable name may be used for different purposes in different parts of a
+program.
+
+Rules to determine the declaration to which each variable reference refers are
+called **scoping** rules.
+
+The portion of the program in which a declaration is valid is called the
+**scope** of the declaration.
+
+Properties which can be computed without executing the program are called
+**static** properties. For e.g. in LET, PROC and LETREC we can determine which
+declaration is associated with each variable use without executing the program.
+
+**How to find the corresponding declaration for a given use of a variable?**
+
+To find which declaration corresponds to a given use of a variable, we search
+outward from the use until we find a declaration of the variable.
+
+The scoping rules described above are called **lexical scoping rules**. The
+variables declared in this way are called **lexical variables**.
+
+**Lexical scoping**
+
+- We can create a hole in a scope by redeclaring a variable. Such an inner
+declaration **shadows** the outer one.
+- Lexical scopes are nested. Each scope lies entirely within another scope. We
+can illustrate this with a **contour diagram**.
+
+**Bindings and extent**
+
+The association between a variable and its value is called a **binding**.
+
+The **extent** of a binding is the time interval during which the binding is
+maintained.
+
+In our little languages, all bindings have **semi-infinite extent**. Once a
+variable gets bound, that binding must be maintained indefinitely (at least
+potentially).
+
+In languages with semi-infinite extent, the garbage collector collects bindings
+when they are no longer reachable. This can only be determined at run-time, so
+we say that this is a **dynamic** property.
+
+"dynamic" sometimes means "during the evaluation of an expression". Other times
+it means "not calculable in advance".
+
+If we did not allow a procedure to be used as the value of a `let`, then
+let-bindings would expire at the end of the evaluation of the let body. This
+is called **dynamic extent**, and it is a static property. Dynamic binding
+behaves similarly.
+
 ### 3.6 Eliminating Variable Names
+
+The number of contours crossed is called the **lexical** (or **static**)
+**depth** of the variable reference. Is is customary to use
+"zero-based indexing", thereby not counting the last contour crossed.
+
+By using lexical depth we could get rid of variable names entirely.
+
+Each variable reference is replaced by its lexical depth; this number uniquely
+identifies the declaration to which it refers. These numbers are called
+**lexical addresses** or **de Bruijn indices**.
+
+This way of recording the information is useful because the lexical address
+predicts just where in the environment any particular variable will be found.
+
+Every variable is found in the environment at the place predicted by its lexical
+depth.
+
 ### 3.7 Implementing Lexical Addressing
+
+TODO
