Add my notes for section 3.7 of chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -11,8 +11,6 @@ uses the variable.
 
 We can use lexical depth to get rid of variable names entirely.
 
-WIP
-
 ## Notes
 
 In this chapter, we study the binding and scoping of variables.
@@ -356,4 +354,60 @@ depth.
 
 ### 3.7 Implementing Lexical Addressing
 
-TODO
+*Parse -> [AST] -> Translate -> [Nameless AST] -> Evaluate*
+
+**The Translator**
+
+The target language will have `nameless-var-exp`, `nameless-let-exp` and
+`nameless-proc-exp` that were not in the source language. And it will lose the
+constructs that they replace namely `var-exp`, `let-exp` and `proc-exp`.
+
+```
+Expression ::= %lexref number
+               [(nameless-var-exp num)]
+
+           ::= %let Expression in Expression
+               [(nameless-let-exp exp body)]
+
+           ::= %lexproc Expression
+               [(nameless-proc-exp body)]
+```
+
+Our translator will reject any program that has one of these new nameless
+constructs.
+
+Our interpreter will reject any program that has one of the old nameful
+constructs.
+
+To calculate the lexical address of any variable reference, we need to know the
+scopes in which it is enclosed.
+
+So `translation-of` will take two arguments: an expression and a **static
+environment**. The static environment will be a list of variables, representing
+the scopes within which the current expression lies.
+
+Looking up a variable in the static environment means finding its position in
+the static environment, which gives a lexical address.
+
+Entering a new scope will mean adding a new element to the static environment.
+
+We are trying to translate an expression `e` which is sitting inside the
+declarations represented by `senv`. To do this, we recursively copy the tree
+except that:
+
+1. Every `var-exp` is replaced by a `nameless-var-exp` with the right lexical
+address.
+2. Every `let-exp` is replaced by a `nameless-let-exp`.
+3. Every `proc-exp` is replaced by a `nameless-proc-exp`.
+
+**The Nameless Interpreter**
+
+Our interpreter takes advantage of the predictions of the lexical-address
+analyzer to avoid explicitly searching for variables at run time.
+
+Instead of having full-fledged environments, we will have nameless
+environments. We can implement a nameless environment as a list of denoted
+values.
+
+There are only two things in our interpreter that use environments: procedures
+and `value-of`.
