Update the notes and README for chapter 3

--- a/05-ch3.md
+++ b/05-ch3.md
@@ -25,6 +25,13 @@ The specification will consist of assertions of the form
 
 meaning that the value of expression `exp` in environment `ρ` is `val`.
 
+- We write down rules of inference and equations that enable us to derive the
+  assertions.
+- We use the rules and equations by hand to find the intended value of some
+  expressions.
+
+The goal is to write a program that implements the language.
+
 **Execution via interpreter**
 
 *program text -> [Front End] -> syntax tree -> [Interpreter] -> answer*
@@ -32,6 +39,11 @@ meaning that the value of expression `exp` in environment `ρ` is `val`.
 **Execution via compiler**
 
 *program text -> [Front End] -> syntax tree -> [Compiler] -> translated program -> [Interpreter or Machine] -> answer*
+
+*[Front End]*: converts program text into an abstract syntax tree (AST).
+
+*[Interpreter]*: a program that looks at a data structure (the AST) and performs
+actions that depend on its structure.
 
 The **source language** or **the defined language** is the text of the program
 written in the language we are implementing.
@@ -74,11 +86,10 @@ grammar, and produces a scanner and a parser for them.
 
 An important part of the specification of any programming language is the set
 of values that the language manipulates. Each language has at least two such
-sets: the **expressed values** and the **denoted values**.
+sets:
 
-The expressed values are the possible values of expressions.
-
-The denoted values are the values bound to variables.
+1. The **expressed values** which are the possible values of expressions.
+2. The **denoted values** which are the values bound to variables.
 
 If we are going to evaluate expressions containing variables, we will need to
 know the value associated with each variable. We do this by keeping those
@@ -279,8 +290,8 @@ A variable **reference** is a use of the variable.
 
 A **declaration** introduces the variable as a name for some value.
 
-A variable reference is bound by the declaration with which it is associated. It
-is **bound** to its value.
+A variable reference is **bound by** the declaration with which it is
+associated. It is **bound** to its value.
 
 Declarations in most programming languages have a limited scope, so that the
 same variable name may be used for different purposes in different parts of a
@@ -293,7 +304,7 @@ The portion of the program in which a declaration is valid is called the
 **scope** of the declaration.
 
 Properties which can be computed without executing the program are called
-**static** properties. For e.g. in LET, PROC and LETREC we can determine which
+**static properties**. For e.g. in LET, PROC and LETREC we can determine which
 declaration is associated with each variable use without executing the program.
 
 **How to find the corresponding declaration for a given use of a variable?**
